--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.deltation.di-events": "https://github.com/Delt06/di-events.git?path=Packages/com.deltation.di-events",
     "com.deltation.di-framework": "https://github.com/Delt06/di-framework.git?path=Packages/com.deltation.di-framework",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.cinemachine": "2.6.5",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.device-simulator": "3.0.1-preview",
     "com.unity.ide.rider": "2.0.7",
